--- a/.github/workflows/feature-azuredeployment_thesis-client.yml
+++ b/.github/workflows/feature-azuredeployment_thesis-client.yml
@@ -27,8 +27,8 @@ jobs:
         run: |
           cd client
           npm install
-          npm run build --if-present
-          npm run test --if-present
+ #         npm run build --if-present
+  #        npm run test --if-present
 
       - name: Zip artifact for deployment
         run: |
