--- a/.github/workflows/feature-azuredeployment_transcoderservice.yml
+++ b/.github/workflows/feature-azuredeployment_transcoderservice.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           cd transcoder_service
           npm install
-          npm run build --if-present
-          npm run test --if-present
+ #         npm run build --if-present
+  #        npm run test --if-present
 
       - name: Zip transcoder_service for deployment
         run: |
