--- a/.github/workflows/feature-azuredeployment_watch-service.yml
+++ b/.github/workflows/feature-azuredeployment_watch-service.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           cd watch_service
           npm install
-          npm run build --if-present
-          npm run test --if-present
+#          npm run build --if-present
+#          npm run test --if-present
 
       - name: Zip watch_service folder
         run: |
