--- a/.github/workflows/feature-azuredeployment_thesis-client.yml
+++ b/.github/workflows/feature-azuredeployment_thesis-client.yml
@@ -25,15 +25,12 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd client
           npm install
- #         npm run build --if-present
-  #        npm run test --if-present
+          npm run build --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: |
-          cd client
-          zip -r ../release.zip .
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -64,4 +61,4 @@ jobs:
           app-name: 'thesis-client'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_32EB6D66A4FA4CDD8EEB9F273ECF1F89 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_60FD089D48634BADB64534E506D31CD2 }}
