Resolve 409 and 502 error

--- a/.github/workflows/feature-azuredeployment_watch-service.yml
+++ b/.github/workflows/feature-azuredeployment_watch-service.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           cd watch_service
           npm install
-#          npm run build --if-present
+          npm run build --if-present
 #          npm run test --if-present
 
       - name: Zip watch_service folder
