--- a/.github/workflows/feature-azuredeployment_transcoderservice.yml
+++ b/.github/workflows/feature-azuredeployment_transcoderservice.yml
@@ -1,4 +1,3 @@
-# Deploy transcoder_service to Azure Web App
 name: Build and deploy transcoder_service to Azure Web App
 
 on:
@@ -21,12 +20,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
           cd transcoder_service
           npm install
- #         npm run build --if-present
-  #        npm run test --if-present
+          npm run build  # Uncomment this if you have a build step
 
       - name: Zip transcoder_service for deployment
         run: |
@@ -45,7 +43,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
