--- a/.github/workflows/feature-azuredeployment_upload-service.yml
+++ b/.github/workflows/feature-azuredeployment_upload-service.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           cd upload_service
           npm install
-#          npm run build --if-present
+          npm run build --if-present
 #          npm run test --if-present
 
       - name: Zip upload_service folder
