--- a/transcoder_service/package.json
+++ b/transcoder_service/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "devstart": "nodemon index.js",
     "build": "echo 'No build needed for transcoder_service'"
   },
