Resolve 409 and 502 error

--- a/.github/workflows/feature-azuredeployment_transcoderservice.yml
+++ b/.github/workflows/feature-azuredeployment_transcoderservice.yml
@@ -2,6 +2,8 @@ name: Build and deploy transcoder_service to Azure Web App
 
 on:
   push:
+    paths:
+      - 'transcoder_service/**'
     branches:
       - feature/AzureDeployment
   workflow_dispatch:
@@ -59,5 +61,5 @@ jobs:
         with:
           app-name: 'transcoderService'
           slot-name: 'Production'
-          package: .
+          package: ./transcoder_service 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A4C2B656DF854A9B92B328971590A752 }}
