--- a/.github/workflows/feature-azuredeployment_upload-service.yml
+++ b/.github/workflows/feature-azuredeployment_upload-service.yml
@@ -2,6 +2,8 @@ name: Build and deploy upload_service to Azure Web App
 
 on:
   push:
+    paths:
+      - 'upload_service/**'
     branches:
       - feature/AzureDeployment
   workflow_dispatch:
