--- a/.github/workflows/feature-azuredeployment_thesis-client.yml
+++ b/.github/workflows/feature-azuredeployment_thesis-client.yml
@@ -2,6 +2,8 @@ name: Build and deploy Node.js app to Azure Web App - thesis-client
 
 on:
   push:
+    paths:
+      - 'client/**'
     branches:
       - feature/AzureDeployment
   workflow_dispatch:
@@ -29,7 +31,7 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          cd client/out
+          cd client
           zip -r ../release-${{ github.run_id }}.zip .
 
       - name: Upload artifact
