--- a/.github/workflows/feature-azuredeployment_transcoderservice.yml
+++ b/.github/workflows/feature-azuredeployment_transcoderservice.yml
@@ -22,11 +22,10 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install and build
+      - name: npm install
         run: |
           cd transcoder_service
           npm install
-          npm run build  # Uncomment this if you have a build step
 
       - name: Zip transcoder_service for deployment
         run: |
@@ -44,7 +43,6 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact
@@ -61,5 +59,5 @@ jobs:
         with:
           app-name: 'transcoderService'
           slot-name: 'Production'
-          package: ./transcoder_service 
+          package: ./transcoder_service
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A4C2B656DF854A9B92B328971590A752 }}
