--- a/.github/workflows/feature-azuredeployment_transcoderservice.yml
+++ b/.github/workflows/feature-azuredeployment_transcoderservice.yml
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'transcoderService'
           slot-name: 'Production'
-          package: ./transcoder_service
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A4C2B656DF854A9B92B328971590A752 }}
