--- a/watch_service/package.json
+++ b/watch_service/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devstart": "nodemon index.js",
-    "build": "echo 'No build needed for transcoder_service'"
+    "build": "echo 'No build needed for transcoder_service'",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
