--- a/.github/workflows/feature-azuredeployment_watch-service.yml
+++ b/.github/workflows/feature-azuredeployment_watch-service.yml
@@ -25,12 +25,14 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd watch_service
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd watch_service
+          zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
