--- a/.github/workflows/feature-azuredeployment_thesis-client.yml
+++ b/.github/workflows/feature-azuredeployment_thesis-client.yml
@@ -33,7 +33,15 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: thesis-client-hsbnagghgxbkczgn  # Replace if your App Service name differs
-          slot-name: Production
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          app-name: 'thesis-client'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_60FD089D48634BADB64534E506D31CD2 }}
           package: ./client
+      - name: Check if publish profile secret is loaded
+        run: |
+            if [ -z "${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}" ]; then
+              echo "❌ Secret AZURE_WEBAPP_PUBLISH_PROFILE is missing or empty."
+              exit 1
+            else
+              echo "✅ Secret AZURE_WEBAPP_PUBLISH_PROFILE is set."
+            fi
